--- a/src/components/Wiki/WeaponCategory/WeaponCategory.module.scss
+++ b/src/components/Wiki/WeaponCategory/WeaponCategory.module.scss
@@ -1,70 +1,146 @@
 .categoryBlock {
-    width: min(1255px, 100vw);
-    margin: 0 auto 48px;
-    height: auto;
+  width: min(1255px, 100vw);
+  margin: 0 auto 48px;
+  height: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 44px;
+  .title {
+    width: 100%;
     display: flex;
-    flex-flow: column nowrap;
-    gap: 44px;
-    .title {
-      width: 100%;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 57px;
+    &:hover {
+      cursor: pointer;
+    }
+    .text {
+      color: #fff;
+      font-family: Gilroy;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 29px;
+    }
+    .line {
+      background: rgba(255, 255, 255, 0.15);
+      height: 2px;
+      flex: 1 0 auto;
+    }
+    .info {
       display: flex;
       flex-flow: row nowrap;
       justify-content: flex-start;
       align-items: center;
-      gap: 34px;
+      .span1 {
+        color: #7c7c89;
+        font-family: Gilroy;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 29px;
+      }
+      .span2 {
+        display: none;
+        color: #7c7c89;
+        font-family: Gilroy;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 12px;
+      }
+    }
+  }
+  .weapons {
+    width: 100%;
+    height:auto;
+    max-height: 232px;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 25px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    overflow: hidden;
+    position: relative;
+    z-index: 3;
+    .weapon {
+      width: 231px;
+      height: 232px;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 29px;
+      border-radius: 14px;
+      background: rgba(255, 255, 255, 0.02);
       &:hover {
         cursor: pointer;
       }
-      .text {
+      .image{
+        width:163px;
+        height:auto;
+      }
+      .weaponName {
         color: #fff;
         font-family: Gilroy;
         font-size: 25px;
         font-style: normal;
         font-weight: 700;
         line-height: 29px;
+        user-select: none;
       }
-      .line {
-        background: rgba(255, 255, 255, 0.15);
-        height: 2px;
-        flex: 1 0 auto;
-      }
-    }
-    .weapons {
-      width: 100%;
-      height: 232px;
-      display: flex;
-      flex-flow: row wrap;
-      gap: 25px;
-      justify-content: flex-start;
-      align-items: flex-start;
-      overflow: hidden;
-      position:relative;
-      z-index:3;
-      .weapon {
-        width: 231px;
-        height: 232px;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-        gap: 29px;
-        border-radius: 14px;
-        background: rgba(255, 255, 255, 0.02);
-        &:hover{
-            cursor:pointer;
-        }
-        .weaponName {
-          color: #fff;
-          font-family: Gilroy;
-          font-size: 25px;
-          font-style: normal;
-          font-weight: 700;
-          line-height: 29px;
-          user-select: none;
-        }
-      }
-    }
-    .weaponsOpened {
-      height: auto;
     }
   }
+  .weaponsOpened {
+    max-height: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .categoryBlock {
+    width: min(390px, 100%);
+    margin: 0 auto;
+    gap: 18px;
+    .title {
+      gap: 43px;
+      .text {
+        font-size: 14px;
+        line-height: 12px;
+      }
+      .info {
+        .span1 {
+          display: none;
+        }
+        .span2 {
+          display: inline;
+          font-size: 12px;
+          line-height: 12px;
+          color: #7c7c89;
+        }
+        .image{
+          width:10px;
+          height:auto;
+        }
+      }
+    }
+    .weapons{
+      max-height:398px;
+      gap:10px;
+      align-items: flex-start;
+      .weapon{
+        width:92px;
+        height:92px;
+        gap:12px;
+        border-radius: 6px;
+        .image{
+          width:65px;
+        }
+        .weaponName{
+          font-size: 10px;
+          line-height: 12px;
+        }
+      }
+    }
+  }
+}
