--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -216,13 +216,14 @@
       .vkBackgroundCover{
         width:220px;
         height:220px;
-        transform:translate(-69%, -55%);
+        transform:translate(-28%, -59%);
         position:relative;
         z-index:1;
       }
       .vkBackground{
         width:220px;
         height:220px;
+        transform:translate(-118px, 0px);
       }
     }
     .content{
