--- a/src/components/FAQ/FAQMobile.module.scss
+++ b/src/components/FAQ/FAQMobile.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   width: min(1920px, 100vw);
-  height: 1080px;
+  height: auto;
   background: radial-gradient(
       75.83% 75.83% at 50% 50%,
       rgba(59, 59, 65, 0.25) 0%,
@@ -8,109 +8,132 @@
     ),
     #0e0e10;
   position: relative;
-  .smallCross1{
-    width:46px;
+  .smallCross1 {
+    width: 46px;
     aspect-ratio: 1/1;
-    position:absolute;
-    top:148px;
-    left:200px;
+    position: absolute;
+    top: 148px;
+    left: 200px;
   }
-  .smallCross2{
-    width:46px;
+  .smallCross2 {
+    width: 46px;
     aspect-ratio: 1/1;
-    position:absolute;
-    top:440px;
-    right:338px;
+    position: absolute;
+    top: 440px;
+    right: 338px;
   }
-  .smallCross3{
-    width:46px;
+  .smallCross3 {
+    width: 46px;
     aspect-ratio: 1/1;
-    position:absolute;
-    top:924px;
-    left:127px;
+    position: absolute;
+    top: 924px;
+    left: 127px;
   }
-  .mediumCross{
-    width:80px;
+  .mediumCross {
+    width: 80px;
     aspect-ratio: 1/1;
-    position:absolute;
+    position: absolute;
     mix-blend-mode: overlay;
-    top:114px;
-    right:139px;
+    top: 114px;
+    right: 139px;
   }
-  .largeCross1{
-    width:150px;
+  .largeCross1 {
+    width: 150px;
     aspect-ratio: 1/1;
-    position:absolute;
+    position: absolute;
     mix-blend-mode: overlay;
-    top:580px;
-    left:246px;
+    top: 580px;
+    left: 246px;
   }
-  .largeCross2{
-    width:150px;
+  .largeCross2 {
+    width: 150px;
     aspect-ratio: 1/1;
-    position:absolute;
+    position: absolute;
     mix-blend-mode: overlay;
-    top:830px;
-    right:69px;
+    top: 830px;
+    right: 69px;
   }
   & main {
-    width: 980px;
+    width: min(390px, 100vw);
     height: auto;
-    margin: 77px auto 0;
+    margin: 73px auto 0;
     & header {
       width: 100%;
       display: flex;
       flex-flow: row nowrap;
-      justify-content: space-between;
-      align-items: flex-start;
+      justify-content: center;
+      align-items: center;
       & h2 {
         color: #eaeaea;
         font-family: Gilroy;
-        font-size: 50px;
+        font-size: 30px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
       }
-      .logo {
-        width: 120px;
-        margin-top: 9px;
-      }
     }
     .mainFlexContainer {
-      width: 100%;
-      height: 815px;
+      width: 309px;
+      height: auto;
       display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-between;
-      align-items: flex-start;
-      margin: 39px auto 0;
+      flex-flow: column nowrap;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 31px auto 0;
       & nav {
-        width: 255px;
-        height: auto;
+        width: 100%;
+        height: 55px;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        overflow-x: scroll;
+        scrollbar-width: none;
+        gap:10px;
+        .navCategory {
+          padding:0 12px;
+          width: fit-content;
+          height: 55px;
+          border-radius: 13px;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          color: #7c7c89;
+          font-family: Gilroy;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 171%;
+          white-space: nowrap;
+          user-select: none;
+        }
+        .navCategoryActive{
+          color: #FFF;
+          background: #1A1A1D;
+        }
       }
       .infoBlock {
-        width: 684px;
-        height: 815px;
+        width: 100%;
+        height: auto;
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
         align-items: center;
-        overflow-y:scroll;
-        scrollbar-width: none;
 
         & h3 {
           color: #fff;
           font-family: Gilroy;
-          font-size: 30px;
+          font-size: 24px;
           font-style: normal;
           font-weight: 700;
           line-height: normal;
-          margin:0 0 41px 0;
-          width:100%;
+          margin: 31px 0 32px 0;
+          width: 100%;
         }
-        .scroller{
-        width:100%;
-        height:calc(815px - 71px);
+        .scroller {
+          width: 100%;
+          height: auto;
         }
       }
     }
