feat: convert all images to webp

--- a/src/components/mobile/HowToStartMobile/HTPCard/HTPCardMobile.module.scss
+++ b/src/components/mobile/HowToStartMobile/HTPCard/HTPCardMobile.module.scss
@@ -3,7 +3,7 @@
   width: 314px;
   height: 359px;
   border-radius: 15px;
-  background: url(./assets/background2.png) center center, url(./assets/background1.png) center center;
+  background: url(./assets/background2.webp) center center, url(./assets/background1.webp) center center;
   background-size: contain contain;
   display: flex;
   flex-flow: column nowrap;
