--- a/src/components/HowToStart/HTPCard/HTPCard.module.scss
+++ b/src/components/HowToStart/HTPCard/HTPCard.module.scss
@@ -2,7 +2,7 @@
   width: 393px;
   height: 449px;
   border-radius: 15px;
-  background: url(./assets/background2.png), url(./assets/background1.png);
+  background: url(./assets/background2.webp), url(./assets/background1.webp);
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
@@ -12,7 +12,7 @@
   &:hover{
     transition:0.3s;
     transform:translate(0, -37px);
-    background: url(./assets/background2.png), url(./assets/background1.png);
+    background: url(./assets/background2.webp), url(./assets/background1.webp);
     cursor:pointer;
   }
   &:hover .cover{
