--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -24,7 +24,7 @@
       transform:translate(-50%, -50%);
       height: 450px;
       aspect-ratio: 1/1;
-      background: url(./assets/tiktokBackgroundCover.png);
+      background: url(./assets/tiktokBackgroundCover.webp);
       background-size: cover;
       z-index:1;
     }
@@ -51,7 +51,7 @@
       transform:translate(-50%, -50%);
       height: 450px;
       aspect-ratio: 1/1;
-      background: url(./assets/youtubeBackgroundCover.png);
+      background: url(./assets/youtubeBackgroundCover.webp);
       background-size: cover;
       z-index:1;
     }
@@ -78,7 +78,7 @@
       transform:translate(-50%, -50%);
       height: 450px;
       aspect-ratio: 1/1;
-      background: url(./assets/telegramBackgroundCover.png);
+      background: url(./assets/telegramBackgroundCover.webp);
       background-size: cover;
       z-index:1;
     }
@@ -105,7 +105,7 @@
       transform:translate(-59%, -58%);
       height: 450px;
       aspect-ratio: 1/1;
-      background: url(./assets/vkBackgroundCover.png);
+      background: url(./assets/vkBackgroundCover.webp);
       background-size: cover;
       z-index:1;
     }
