--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -20,6 +20,9 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  @media(max-width:1900px){
+    font-size: 40px;
+  }
 }
 
 @mixin text() {
@@ -30,6 +33,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: 196%;
+  @media(max-width:1900px){
+    font-size: 20px;
+    line-height:196%;
+  }
 }
 
 @mixin footer() {
@@ -38,6 +45,9 @@
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
+  @media(max-width:1900px){
+    gap:10px;
+  }
 }
 
 @mixin date() {
@@ -51,10 +61,15 @@
 
 @mixin image() {
   border-radius: 15px;
+  overflow:hidden;
+  .img{
+    width:100%;
+    height:auto;
+  }
 }
 
 .wrapper {
-  width: 1920px;
+  width: min(1920px, 100vw);
   height: 1080px;
   background: #1a1a1e;
   position: relative;
@@ -79,9 +94,17 @@
       @include layoutBlock();
       margin: 120px 0 29px 79px;
       gap: 66px;
+      @media(max-width:1900px){
+        margin:100px 0 0 20px;
+        width:calc(65% - 20px);
+        gap:10px;
+      }
       .infoBlock {
         width: 523px;
         @include infoBlock();
+        @media(max-width:1900px){
+          width:50%;
+        }
         .title {
           @include title();
         }
@@ -98,6 +121,10 @@
       }
       .image {
         @include image();
+        @media(max-width:1900px){
+          width:45%;
+          max-height:90%;
+        }
       }
     }
   }
@@ -107,11 +134,22 @@
     height: 385px;
     background: #e4a520;
     position:relative;
+    @media(max-width:1900px){
+      width:65%;
+    }
     .layoutBlock {
       @include layoutBlock();
+      @media(max-width:1900px){
+        width:35%;
+        margin:0;
+      }
       .infoBlock {
         margin: 38px 0 0px 38px;
         width: 362px;
+        @media(max-width:1900px){
+          width:95%;
+          margin:20px auto;
+        }
         @include infoBlock();
         .title {
           @include title();
@@ -139,12 +177,23 @@
       z-index:2;
       bottom:0px;
       right:0px;
+      @media(max-width:1900px){
+        width:65%;
+      }
       .layoutBlock {
         @include layoutBlock();
+        @media(max-width:1900px){
+          width:95%;
+          margin:0 auto;
+        }
         .infoBlock {
           margin: 38px 0 0px 38px;
           width: 362px;
           @include infoBlock();
+          @media(max-width:1900px){
+            width:65%;
+            margin:20px auto;
+          }
           .title {
             @include title();
           }
@@ -163,6 +212,10 @@
       .image {
         @include image();
         margin:38px 0 0 21px;
+        @media(max-width:1900px){
+          width:35%;
+          margin:20px auto;
+        }
       }
     }
   }
@@ -179,13 +232,23 @@
     flex-flow: column nowrap;
     justify-content: flex-end;
     align-items: flex-start;
+    @media(max-width:1900px){
+      width:35%;
+    }
     .layoutBlock {
       @include layoutBlock();
       margin: 0px 38px 28px 38px;
       gap: 31px;
+      @media(max-width:1900px){
+        margin:0px auto 15px;
+        width:95%;
+      }
       .infoBlock {
         @include infoBlock();
         width: 362px;
+        @media(max-width:1900px){
+          width:60%;
+        }
         .title {
           @include title();
           color: #1a1a1e;
@@ -193,6 +256,11 @@
         .text {
           @include text();
           color: rgba(26, 26, 30, 0.55);
+          @media(max-width:1900px){
+            width:100%;
+            font-size:18px;
+            line-height:196%;
+          }
         }
         .footer {
           @include footer();
@@ -205,6 +273,9 @@
       }
       .image {
         @include image();
+        @media(max-width:1900px){
+          width:calc(40% - 10px);
+        }
       }
     }
     .topRightBlock {
@@ -223,18 +294,32 @@
         flex-flow:column nowrap;
         margin: 38px 0px 0px 38px;
         gap: 31px;
+        @media(max-width:1900px){
+          width:95%;
+          margin:38px auto;
+        }
         .infoBlock {
           @include infoBlock();
           width: 362px;
+          @media(max-width:1900px){
+            width:100%;
+          }
           .title {
             @include title();
           }
           .text {
             @include text();
+            @media(max-width:1900px){
+              width:100%;
+            }
           }
           .image {
             @include image();
             margin-top:13px;
+            @media(max-width:1900px){
+              width:100%;
+              height:202px;
+            }
           }
           .footer {
             @include footer();
