--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,7 +84,7 @@ body {
   max-width: 100vw;
   /* overflow-x: hidden; */
   scroll-behavior: smooth;
-  background-color: #000;
+  background: #000;
 }
 
 /* body {
