--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-flow:column nowrap;
   justify-content: flex-start;
   align-items: center;
-  width:100vw;
+  width:99vw;
   height:auto;
   margin:0 auto;
 }
@@ -12,13 +12,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 99vw;
   height: auto;
   position:relative;
   margin:0 auto;
 }
 .footer{
-  max-width:1920px;
+  width:min(1920px, 98vw);
   min-height:190px;
   margin:0 auto;
   display:flex;
