--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,10 +81,10 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 99vw;
   /* overflow-x: hidden; */
   scroll-behavior: smooth;
-  background: #000;
+  background: #0e0e10;
 }
 
 /* body {
