feat: add toTheUpArrow to the index page and decrease height of About component

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -7,7 +7,8 @@
 .wrapper {
   width: min(1920px, 99vw);
   height:fit-content;
-  min-height:1080px;
+  //min-height:1080px;
+  min-height:700px;
   background: #0e0e10;
   margin: 0 auto;
   position:relative;
